# autopoints

./: .dockerignore  .env.deploy.example  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: live-checks.yml  ping.yml  release.yml  test.yml
autopoints/: config.py  watchlist_runner.py  watchlists.py
autopoints/api/: main.py  models.py  onboard.py  server.py
autopoints/auth/: guardrails.py  op_client.py  preflight.py  session_manager.py  session_store.py
autopoints/cache/: store.py
autopoints/cli/: main.py  watchlist.py
autopoints/discord_bot/: bot.py  embeds.py  server.py
autopoints/pricing/: cpp.py
autopoints/programs/: airports.json  geo.py  loader.py  transfer_bonuses.json  transfer_ratios.json  valuations.json
autopoints/programs/award_charts/: ac.json  ba.json  vs.json
autopoints/providers/: _browserbase.py  aeroplan.py  alaska.py  amadeus.py  base.py  demo.py  fast_flights.py  google_flights.py  static_charts.py
autopoints/search/: build.py  metros.py  models.py  orchestrator.py
autopoints/web/static/: app.js  onboard.css  onboard.js  styles.css
autopoints/web/templates/: index.html  onboard.html
docs/: DEPLOY.md  DEPLOY_FROM_MAC.md  E2E.md  LIVE_CHECKS.md  QUICKSTART.md  RESEARCH.md  ROADMAP.md  STRATEGY.md
docs/brainstorms/: 2026-06-07-points-redemption-sprint-requirements.md  2026-06-08-v2a-authenticated-sessions-requirements.md
docs/ops/: 1password-connect-nas-setup.md  codex-cutover-runbook.md
docs/plans/: 2026-06-07-001-feat-points-redemption-v0-sprint-plan.md  2026-06-07-002-fix-post-review-residuals-plan.md  2026-06-08-001-feat-alaska-selector-spike-plan.md  2026-06-17-001-feat-cpp-verify-and-research-integration-plan.md  2026-06-17-002-feat-v2a-authenticated-sessions-plan.md
docs/probes/: v15-stagehand-feasibility-research.md  v1b-ba-mitmproxy-approach.md  v1b-ba-rewards-research.md  v1c-aeroplan-endpoint-discovery.md  v1c-aeroplan-identity-refresh.md  v2a-aeroplan-session-probe.md
scripts/: check_live.py  deploy.sh  e2e.py  probe_v2a_aeroplan_session.py  probe_v2a_aeroplan_stagehand.py  probe_v2a_human_login.py
tests/: test_aeroplan.py  test_alaska.py  test_api.py  test_auth_spine.py  test_cli_surface.py  test_cpp.py  test_cpp_demo_smoke.py  test_discord_embeds.py  test_geo_and_charts.py  test_google_flights.py  test_onboarding.py  test_orchestrator.py  test_transfer_bonus_uplift.py  test_watchlists.py
tests/e2e/: conftest.py  test_browser.py
