[project]
name = "autopoints"
version = "0.1.0"
description = "Automated points-redemption value engine: cash vs. award CPP across UR/MR transfer partners."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "sqlite-utils>=3.36",
    "python-dateutil>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
scrape = [
    "curl-cffi>=0.7",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "playwright>=1.45",
]
e2e = [
    "playwright>=1.45",
    "pytest-playwright>=0.5",
]
discord = [
    "discord.py>=2.4",
]

[project.scripts]
autopoints = "autopoints.cli.main:app"
autopoints-server = "autopoints.api.server:run"
autopoints-discord = "autopoints.discord_bot.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autopoints"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests/e2e"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: browser-driven end-to-end tests (requires playwright install chromium)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
