[project]
name = "autopoints"
version = "0.1.0"
description = "Automated points-redemption value engine: cash vs. award CPP across UR/MR transfer partners."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "sqlite-utils>=3.36",
    "python-dateutil>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # Google Flights backend via fli library (punitarani/fli on GitHub).
    # PEP 508 direct reference: the GitHub repo builds a wheel named `flights`,
    # but the PyPI `flights` namespace points at an unrelated package. Using a
    # direct URL ensures pip pulls the right code regardless of PyPI state.
    # Replaces Amadeus (decommissioned 2026-07-17).
    "flights @ git+https://github.com/punitarani/fli.git@main",
    # AWS SigV4 signing for the Aeroplan market-token handshake (v1.c).
    # See docs/probes/v1c-aeroplan-endpoint-discovery.md.
    "botocore>=1.34",
]

[project.optional-dependencies]
scrape = [
    "curl-cffi>=0.7",
]
browserbase = [
    "browserbase>=1.12",
    "playwright>=1.45",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "playwright>=1.45",
]
e2e = [
    "playwright>=1.45",
    "pytest-playwright>=0.5",
]
discord = [
    "discord.py>=2.4",
]

[project.scripts]
autopoints = "autopoints.cli.main:app"
autopoints-server = "autopoints.api.server:run"
autopoints-discord = "autopoints.discord_bot.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autopoints"]

[tool.hatch.metadata]
# Required to accept the PEP 508 direct URL reference for `flights @ git+...`
# in project.dependencies. Hatchling refuses direct references by default for
# PyPI safety; we use it deliberately for fli because the PyPI `flights`
# namespace points at an unrelated package.
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "tests/e2e"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: browser-driven end-to-end tests (requires playwright install chromium)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
